# customer-orders-api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  models.py  schemas.py
scripts/: setup_database.py
tests/: conftest.py  test_api.py
